--- a/templates/bom.html
+++ b/templates/bom.html
@@ -7,39 +7,22 @@
     <meta charset="utf-8">
 </head>
 <body class="body">
-    <div class="account" id="logstatus">
-        <span class="account-content" onclick="sign_in()">登入</span>
-        <span class="account-content" onclick="register()">註冊</span>
-    </div>
+    <div class="bodylist"></div>
+
     <hr>
-    <div class="index_title">FINDSTOCK電子元件商城</div>
-    </br>
-    <div class="search_area">
-        <div class="search">
-            <input placeholder="請輸入產品編號" class="search-bar" onkeypress="handle_search(event)"></input>
-            <div class="search_btn" onclick="golist()">
-                <img src="../static/search.png" class="search-icon" onmouseover="style.opacity=0.7" onmouseout="style.opacity=1"></img>
-            </div>
-            <span class="search_many"onclick="searchmany_open()" onmouseover="style.opacity=0.7" onmouseout="style.opacity=1">批量搜尋</span>
-        </div>
-    </div>
-    </br>    
-    </br>
-    <div class="select">
-        <span class="select-btn" onclick="goindex()">首頁</span>
-        <span class="select-btn" onclick="gostock()">庫存上傳</span>
-        <span class="select-btn" onclick="gobom()">BOM表</span>
-        <span class="select-btn" onclick="gocontact()">聯繫我們</span>
-    </div>
-    <hr>
-    <a href="{{ url_for('static', filename='bom_template.xlsx') }}" download="bom_template.xlsx">下載模板</a>
+    <a href="{{ url_for('static', filename='bom_template.xlsx') }}" download="bom_template.xlsx">下載模板(功能開發中)</a>
     <br>    
     <br>
     <input type="file" id="input"></br></br>
     <button onclick="">上傳</button></br>
     <hr>
-
-
+    <div class="footer">
+        <div>聯絡我們</div>
+        <div>TEL: 02-26975001 #2027</div>
+        <div>EMAIL: jason.lin@pteamtech.com</div>
+        <div>LINE: rtyu73162</div>
+        <div>LINE@報價機器人: @397xatre</div>
+    </div>
     <script src="{{url_for('static', filename='page.js') }}"></script>
     <script src="{{url_for('static', filename='login.js') }}"></script>
 
