update user flow

--- a/templates/list.html
+++ b/templates/list.html
@@ -140,6 +140,7 @@
       }
 
       function addItemtoRFQ(button){
+        checkLogin_list();
         let companyname=getsupplier();
         let itemid=button.id;
         console.log(itemid);
